--- a/hash-functions/mac/index.tex
+++ b/hash-functions/mac/index.tex
@@ -1,4 +1,4 @@
-\section{Имитовставка}\label{section-MAC}
+\section{Имитовставка (MAC)}\label{section-MAC}
 \selectlanguage{russian}
 \index{имитовставка}
 
@@ -74,3 +74,12 @@ $\textrm{ipad}$ -- последовательность повторяющихс
 \] \[
      = f(\MAC(K, m), m_{n+1}).
 \]
+
+\input{universal-hash-functions}
+
+\input{one-time-mac}
+
+\input{wcmac}
+
+\input{umac}
+
