Исправления ошибок в разделах про универсальное хэширование

--- a/hash-functions/mac/index.tex
+++ b/hash-functions/mac/index.tex
@@ -75,7 +75,7 @@ $\textrm{ipad}$ -- последовательность повторяющихс
      = f(\MAC(K, m), m_{n+1}).
 \]
 
-\input{universal-hash-functions}
+\input{universal-hashing}
 
 \input{one-time-mac}
 
