--- a/hash-functions/mac/umac.tex
+++ b/hash-functions/mac/umac.tex
@@ -1,9 +1,9 @@
 \subsection{UMAC}\label{sec:umac}
 \selectlanguage{russian}
 
-Конструкция UMAC, предложеная в 1999 году (\cite{Black:Halevi:Krawczyk:etc:1999}), также использует подход с быстрым универсальным хэшированием большого исходного сообщения и хэшированием небольшого блока информации надёжной (на 1999 год), но медленной ключевой функцией HMAC-SHA1. В 2003 году вошёл в список алгоримтов, отобранных инициативой NESSIE (\langen{New European Schemes for Signatures, Integrity, and Encryptions}) как безопасный алгоритм вычисления имитовставки. Был стандартизован как RFC 4418 (\cite{rfc4418}). На сегодняшний день не считается криптографически стойким из-за уязвимостей, найденных в SHA-1.
+Конструкция UMAC, предложенная в 1999 году (\cite{Black:Halevi:Krawczyk:etc:1999}), также использует подход с быстрым универсальным хэшированием большого исходного сообщения и хэшированием небольшого блока информации надёжной (на 1999 год), но медленной ключевой функцией HMAC-SHA1. В 2003 году вошёл в список алгоритмов, отобранных инициативой NESSIE (\langen{New European Schemes for Signatures, Integrity, and Encryptions}) как безопасный алгоритм вычисления имитовставки. Был стандартизован как RFC 4418 (\cite{rfc4418}). На сегодняшний день не считается криптографически стойким из-за уязвимостей, найденных в SHA-1.
 
-Класс универсальных хэш-функций $\textrm{NH}_K (m)$ описывается следующим образом. Битовая строка $m$ длиной до 1024 32-битовых <<слов>> и размером, кратная 2 <<словам>>, разбивается на отдельные блоки по 32 бита $m_1, m_2, \dots, m_l$. 32-битные ключи $K_1, K_2, \dots, K_l$ получены из исходного ключа $K$ с помощью генератора псевдослучайных чисел. Далее вычисление 64-битового хэша выглядит так: \[\begin{array}{ll}
+Используемый в UMAC универсальный$_2$ класс хэш-функций $\textrm{NH}_K (m)$ описывается следующим образом. Битовая строка $m$ длиной до 1024 32-битовых <<слов>> и размером, кратная 2 <<словам>>, разбивается на отдельные блоки по 32 бита $m_1, m_2, \dots, m_l$. 32-битные ключи $K_1, K_2, \dots, K_l$ получаются из исходного ключа $K$ с помощью генератора псевдослучайных чисел. Далее вычисление 64-битового хэша выглядит так: \[\begin{array}{ll}
     \textrm{NH}_K (m) = & ( m_1 +_{32}K_1) \times_{64} (m_2 +_{32} K_2) +_{64} \dots \\
                         & \dots ~ +_{64} ~ \dots \\
                         & \dots ~ +_{64} ~ (m_{l-1} +_{32} K_{l-1}) \times_{64} (m_l+_{32}K_l),
@@ -12,7 +12,7 @@
 \begin{figure}
     \centering
     \includegraphics[width=1\textwidth]{pic/UMAC}
-    \caption{Универсальне хэширование $\textrm{NH}_K (m)$ в UMAC}
+    \caption{Универсальное хэширование $\textrm{NH}_K (m)$ в UMAC}
     \label{fig:UMAC}
 \end{figure}
 
