--- a/hash-functions/mac/universal-hashing.tex
+++ b/hash-functions/mac/universal-hashing.tex
@@ -1,4 +1,4 @@
-\subsection{Универсальные хэш-функции}\label{sec:universal-hash-functions}
+\subsection{Универсальное хэширование}\label{sec:universal-hashing}
 \selectlanguage{russian}
 Наличие одного единственного правила хэширования может привести к тому, что злоумышленник, зная точную формулу вычисления хэша, сможет подобрать такой набор входных данных, который с большой степенью вероятности даёт коллизии обычной (не криптографической) хэш-функции. Кроме того, сами хэш-функции также разрабатываются исходя из определённого предположения о входных данных. Алгоритмы хэширования могут содержать некоторые константы, которые разработчику информационной системы предлагается выбрать самостоятельно, основываясь на его предположениях об особенностях входных данных. Но квалификации разработчика, либо его априорных знаний, может не хватать для эффективного выбора конкретной реализации (алгоритм и параметры) хэширования. Исходя из этого Картер и Вегман в 1979 году (\langen{John Lawrence Carter, Mark N. Wegman}, \cite{Carter:Wegman:1979}) предложили определить класс алгоритмов хэширования с возможностью выбора одного из них непосредственно в момент вызова.
 
