--- a/hash-functions/mac/wcmac.tex
+++ b/hash-functions/mac/wcmac.tex
@@ -1,10 +1,10 @@
 \subsection{Конструкция Вегмана-Картера}
 \selectlanguage{russian}
 
-В 1981 году Вегман и Картер предложили (\cite{Wegman:Carter:1981}) использовать универсальное хэширование (раздел~\ref{sec:universal-hash-functions}) для построение алгоритмов имитовставок. В оригинале авторы предполагали, что каждое сообщение содержит неповторяющийся номер $i$, а секретный ключ между отправителем и получателем состоит из двух частей:
+В 1981 году Вегман и Картер предложили (\cite{Wegman:Carter:1981}) использовать универсальное хэширование (раздел~\ref{sec:universal-hashing}) для построение алгоритмов имитовставок. В оригинале авторы предполагали, что каждое сообщение содержит неповторяющийся номер $i$, а секретный ключ между отправителем и получателем состоит из двух частей:
 
 \begin{itemize}
-    \item параметра $k_1$, задающего способ выбора функции из класса универсального хэширования $H: K \times A \to B$;
+    \item параметра $k_1$, задающего способ выбора функции из универсального класса хэширования $H: K \times A \to B$;
     \item параметра $k_2$, который представлял собой \emph{последовательность} строк $b_1, b_2, \dots, b_n$.
 \end{itemize}
 
@@ -17,7 +17,7 @@
 
 Авторы показали надёжность данной схемы при условии случайного выбора ключей и универсальности класса хэширования. Однако с практической точки зрения использовать ключи, состоящие из \emph{последовательностей} очень непрактично. Более того, можно было передать столько сообщений, сколько элементов последовательности задано в $k_2$. Для передачи сообщения сверх этого лимита нужно было либо расширить существующий ключ, либо сгенерировать новый.
 
-Поэтому сейчас вместо использования последовательности строк $b_1, b_2, \dots, b_n$ размера $n$ бит в качестве ключа предполагается наличие некоторого класса псевдослучайных функций (\langen{pseudorandom function family, PRF}), который эмулирует \emph{случайного оракула}. В своей идеализированной модели он для каждого некоторого входа может выдать ответ, случайно распределённой по области значений. Однако если на вход случайного оракула будет подано уже ранее подававшееся значение, он должен выдать прежний ответ. Входом этого оракула являются, во-первых, некоторое случайное число $r$, которое заменило собой номер сообщения, во-вторых часть общего секретного ключа $k_2$, которая будет служить для выбора конкретной функции из класса псевдослучайных.
+Поэтому сейчас вместо использования последовательности строк $b_1, b_2, \dots, b_n$ в качестве ключа предполагается наличие некоторого класса псевдослучайных функций (\langen{pseudorandom function family, PRF}), который эмулирует \emph{случайного оракула}. В своей идеализированной модели он для каждого некоторого входа может выдать ответ, случайно распределённой по области значений. Однако если на вход случайного оракула будет подано уже ранее подававшееся значение, он должен выдать прежний ответ. Входом этого оракула являются, во-первых, некоторое случайное число $r$, которое заменило собой номер сообщения, во-вторых часть общего секретного ключа $k_2$, которая будет служить для выбора конкретной функции из класса псевдослучайных.
 
 В качестве практической реализации такого класса функций могут, с некоторым приближением, выступать другие реализации имитовставок, даже если они медленно работают. Например, основанные на криптографических хэш-функциях или блочных шифрах. Потому что им на вход (в отличие от быстрой функции универсального хэширования) подаётся только небольшой блок информации -- случайное число $r$.
 
@@ -34,4 +34,4 @@
 \textrm{MAC} (m) = \langle r, H_{k_1}(m) \oplus PRF_{k_2}(r) \rangle.
 \end{array} \]
 
-Как утверждается в~\cite{Krovetz:2000}, использование данной конструкции позволяет достичь скорости хэширование в $0{,}5$ циклов процессора на один байт сообщения (\langen{cycles per byte, cpb}).
+Как утверждается в~\cite{Krovetz:2000}, использование данной конструкции позволяет достичь скорости хэширования в $0{,}5$ циклов процессора на один байт сообщения (\langen{cycles per byte, cpb}).
