--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1423,6 +1423,18 @@
 	language	= {English}
 }
 
+@book{Pogorelov:Sachkov:2006,
+    title       = {Словарь криптографических терминов},
+    editor      = {Погорелов, В. А. and Сачков В. Н.},
+    address     = {Москва},
+    year        = {2006},
+    publisher   = {Издательство МЦНМО},
+    isbn        = {5-94057-257-X},
+    pagetotal   = {96},
+    url         = {https://www.infosystems.ru/upload/iblock/154/slovar.pdf},
+    language    = {Russian},
+}
+
 @book{Brittain:Darwin:2007,
 	author		= {Brittain, Jason and Darwin, Ian F.},
 	title		= {Tomcat -- The Definitive Guide: Vital Information for Tomcat Programmers and Administrators: Tomcat 6.0 (2. ed.).},
