Minor translation, punctuation fix

--- a/protocols/properties.tex
+++ b/protocols/properties.tex
@@ -20,9 +20,9 @@
 	\item Аутентификация при рассылке по многим адресам или при подключении к службе подписки/уведомления.\\*
 		\langen{Authentication in Multicast or via a Subscribe / Notify Service}.
 	\begin{itemize}
-		\item[(G4)] Явная аутентификация получателя.\\*
+		\item[(G4)] Неявная аутентификация получателя.\\*
 			\langen{Implicit Destination Authentication}.
-		\item[{}] Протокол должен гарантировать, что отправленное сообщение доступно для чтения только легальным получателям. То есть только легальные авторизованные участники будут иметь доступ к актуальной информации, многоадресному сообщению или сеансу групповой связи. Включает в себя группы рассылки с очень динамичным членством.
+		\item[{}] Протокол должен гарантировать, что отправленное сообщение доступно для чтения только легальным получателям. То есть, только легальные авторизованные участники будут иметь доступ к актуальной информации, многоадресному сообщению или сеансу групповой связи. Включает в себя группы рассылки с очень динамичным членством.
 		\item[(G5)] Аутентификация источника.\\*
 			\langen{Source Authentication}.
 		\item[{}] Легальные получатели смогут аутентифицировать источник и содержание информации или группового общения. Включает случаи, когда члены группы не доверяют друг другу.
