--- a/foreword.tex
+++ b/foreword.tex
@@ -96,6 +96,7 @@
 	\item[] Роман Маракулин\begin{tiny} (201-211 гр.)\end{tiny}
 	\item[] Андрей Мартыненко\begin{tiny} (201-312 гр.)\end{tiny}
 	\item[] Александр Матков\begin{tiny} (201-314 гр.)\end{tiny} %alexmatkov
+	\item[] Иосиф Меньшиков\begin{tiny} (201-719 гр.)\end{tiny}	%X-Mass
 	\item[] Артём Меринов\begin{tiny} (201-214 гр.)\end{tiny}
 	\item[] Даниил Меркулов\begin{tiny} (201-111 гр.)\end{tiny}
 	\item[] Олег Милосердов\begin{tiny} (201-016 гр.)\end{tiny}
