Перенос главы про исторические шифры в отдельную папку для удобства редактирования

--- a/Information Security.tex
+++ b/Information Security.tex
@@ -27,25 +27,7 @@
 
 \input{definitions}
 
-\chapter{Классические шифры}
-
-В главе приведены наиболее известные \emph{классические} шифры, которыми можно было пользоваться до появления роторных машин. К ним относятся такие шифры, как шифр Цезаря\index{шифр!Цезаря}, шифр Плейфера\index{шифр!Плейфера}, шифр Хилла\index{шифр!Хилла} и шифр Виженера\index{шифр!Виженера}. Они наглядно демонстрируют различные классы шифров.
-
-\input{monoalphabetic_ciphers}
-
-\input{bigrammnye_substitution_ciphers}
-
-\input{hills_cipher}
-
-% \subsection{Омофонные замены}
-%
-% Омофонными заменами называют криптопримитивы, в основе которых лежит замена групп символов открытого текста $M$ на группу символов $C$ с использованием ключа $K$. Такой метод шифрования вносит неоднозначность между $M$ и $C$, это позволяет защититься от методов частотного криптоанализа.
-%  \subsection{шифрокоды}
-%  Шифрокоды -- это класс шифров сочетающих в себе свойства кодов и помехозащищённости со свойствами шифра и обеспечения конфиденциальности.
-
-\input{vigeneres_cipher}
-
-\input{polyalphabetic_cipher_cryptanalysis}
+\subimport*{historical-ciphers/}{index}
 
 \input{perfect_secure_systems}
 
