Использование sloppy-режима для формирования списка литературы без строк, выезжающих за границы страниц

--- a/Information Security.tex
+++ b/Information Security.tex
@@ -397,6 +397,6 @@ NIST (Национальный институт стандартов и техн
 
 \printindex
 
-\printbibliography[heading=bibintoc,title={Литература}]
+\printusedliterature
 
 \end{document}
