--- a/_settings.tex
+++ b/_settings.tex
@@ -65,6 +65,10 @@
 number = {\textnumero}%
 }
 
+\newcommand{\printusedliterature}{%
+\sloppy\printbibliography[heading=bibintoc,title={Литература}]%
+}
+
 \newcommand{\indexchapter}[1]{%
 \chapter*{#1}%
 \addcontentsline{toc}{chapter}{#1}%
