Исправления "выезжающих" строк в разделе про блочные шифры

--- a/block-ciphers/GOST_28147-89.tex
+++ b/block-ciphers/GOST_28147-89.tex
@@ -13,7 +13,7 @@
 
 Структурная схема алгоритма шифрования представлена на рис.~\ref{fig:gost-28147-89} и включает:
 \begin{itemize}
-    \item ключевое запоминающее устройство (КЗУ) на 256 бит, которое состоит из восьми 32-разрядных накопителей $(X_0, X_1, X_2, X_3, X_4, X_5, X_6, X_7)$ и содержит сеансовые ключи шифрования одного раунда;
+    \item ключевое запоминающее устройство (КЗУ) на 256 бит, которое состоит из восьми 32-разрядных накопителей $(X_0, X_1, \dots, X_7)$ и содержит сеансовые ключи шифрования одного раунда;
     \item 32-разрядный сумматор $\boxplus$ по модулю $2^{32}$;
     \item сумматор $\oplus$ по модулю 2;
     \item блок подстановки $(S)$;
