Исправление предупреждений TeX в главе про разделение секрета

--- a/secret-sharing/brickells.tex
+++ b/secret-sharing/brickells.tex
@@ -1,11 +1,9 @@
 \subsection{Схема разделения секрета Брикелла}\index{схема разделения секрета!Бриккела|(}\index{схема!Бриккела|(}
 \selectlanguage{russian}
 
-Рассмотрим схему Брикелла (\langen{Ernest Francis Brickell},~\cite{Brickell:1990}) разделения секрета по коалициям.
-
-По-прежнему
-    \[ \{ U_1, U_2, \dots, U_N \} \]
--- легальные пользователи. Пусть $\Z_p$ -- кольцо целых чисел по модулю $p$. Рассмотрим векторы
+Рассмотрим схему Брикелла (\langen{Ernest Francis Brickell},~\cite{Brickell:1990}) разделения секрета по коалициям. По-прежнему\[
+	\{ U_1, U_2, \dots, U_N \}
+\] -- легальные пользователи. Пусть $\Z_p$ -- кольцо целых чисел по модулю~$p$. Рассмотрим векторы
     \[ \mathcal{U} = \left\{ (u_1, u_2, \dots, u_d) \right\}, ~~ u_i \in \Z_p \]
 длины $d$. Каждому пользователю $U_i, ~ i = 1, \dots, N$ ставится в соответствие вектор
     \[ \varphi(U_i) \in \mathcal{U}, ~~ i = 1, \dots, N. \]
@@ -18,7 +16,7 @@
     \[ (1, 0, 0, \dots, 0) \]
 длины $d$. Линейная оболочка любого набора векторов, не образующих коалицию, \emph{не должна} содержать вектор $(1, 0, 0, \dots, 0)$ длины $d$.
 
-Пусть $K_0 \in \Z_p$ -- общий секрет. Распределение секрета производится следующим образом. Сначала вычисляется вектор $(K_0, K_1, \dots, K_{d-1})$, где первая координата -- это общий секрет, а остальные координаты выбираются из $\Z_p$ случайно. Затем вычисляются скалярные произведения:
+Пусть $K_0 \in \Z_p$ -- общий секрет. Случайным образом из $\Z_p$ выбираются координаты $K_1$, $K_2$, $\dots$, $K_{d-1}$. Далее вместе с $K_0$ они объединяются в вектор $(K_0, K_1, \dots, K_{d-1})$ и вычисляются $N$ скалярных произведений:
 \[\begin{array}{l}
 	\left( \left( K_0, K_1, \dots, K_{d-1} \right), ~ \varphi(U_1) \right) ~=~ a_1, \\
 	\left( \left( K_0, K_1, \dots, K_{d-1} \right), ~ \varphi(U_2) \right) ~=~ a_2, \\
@@ -26,7 +24,7 @@
 	\left( \left( K_0, K_1, \dots, K_{d-1} \right), ~ \varphi(U_N) \right) ~=~ a_N. \\
 \end{array}\]
 
-Пользователям $U_i, ~ i = 1, 2, \dots, N$ выдаются их частичные секреты:
+Пользователям $U_i, ~ i = 1, 2, \dots, N$ выдаются \emph{следы} -- их частичные секреты:
     \[ U_i \colon \left\{ \varphi(U_i), a_i \right\}. \]
 
 Пусть коалиция $C$ -- допустимая, например:
