--- a/secret-sharing/index.tex
+++ b/secret-sharing/index.tex
@@ -87,16 +87,14 @@
 \begin{table}[!ht]
     \centering
     \caption{Распределение секрета по определённым коалициям\label{tab:secret-share-coalition-2}}
-    \begin{tabular}{|c||c|c|c|c|c|}
-        \hline
+    \begin{tabular}{c|c|c|c|c|c}
               & $C_1$     & $C_2$     & $C_3$           & $C_4$           & $C_5$  \\
-        \hline \hline
+        \hline
         $U_1$ & $a_1$     & $b_1$     & --              & --              & -- \\
         $U_2$ & $K - a_1$ & --        & $c_2$           & $d_2$           & --\\
         $U_3$ & --        & $K - b_1$ & $c_3$           & $d_3$           & $e_3$ \\
         $U_4$ & --        & --        & $K - c_2 - c_3$ & --              & $e_4$ \\
         $U_5$ & --        & --        & --              & $K - d_2 - d_3$ & $K - e_3 - e_4$ \\
-        \hline
     \end{tabular}
 \end{table}
 
